# clonechat

./: .gitignore  README.md  clonechat.py  constants.py  pyproject.toml  requirements.txt  requirements_win.txt
utils/: __init__.py  base.py  cli.py  client.py  telegram.py
utils/telegram/: abstract.py  message.py  targets.py
