[tool.poetry]
name = "clonechat"
version = "0.1.0"
description = "A Telegram Chat content Cloner"
authors = ["sr-pato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.33.1"
cryptg = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
