[tool.poetry]
name = "clonechat"
version = "0.1.0"
description = "A Telegram Chat content Cloner"
authors = ["sr-pato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptg = "^0.4.0"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
uvloop = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
